--- a/어셈블리어 개념.md
+++ b/어셈블리어 개념.md
@@ -11,4 +11,60 @@
 분해하여 동일한 기능을 하도록 만들어 내는 것인데, 보안 분야에서 중요시되는 학문이다. 주로 악성코드 분석과 소프트웨어의
 보안성 등에 활용된다.</code></pre>
 
-## Add more
+## Virtual Machine Level
+<pre><code>Lv.4 High Level Language - C, JAVA, Python etc.
+Lv.3 Assembly Language
+Lv.2 Instruction Set Architecture(ISA) - OS, Shell, Kernal etc
+Lv.1 Digital Logic - HardWare</code></pre>
+>C언어는 다른 언어와 달리 낮은 수준의 시스템에도 접근이 가능하다. 직접 하드를 건드릴 수도 있는 언어인만큼 오류가 났을 때 크게 날 확률도 높다.
+>cf) 레지스터 : 자료를 보관하는 아주 빠른 기억 장소 (Register > Cache > RAM > SSD > HDD)
+
+### Binary digit(이진수) - 이산수학으로 인해 생략
+### Boolean(부울대수 및 논리회로) - 논리회로로 인한 생략
+
+## 중앙 처리 장치(CPU)
+<pre><code>레지스터 안에 ALU(산술 논리 장치), CU(제어 장치), 클럭(단위 : Hz)이 존재
+데이터 버스 : CPU와 메모리 간 명령어와 데이터를 전송
+입출력 버스 : 시스템의 입출력 장치 간에 데이터를 전송
+주소 버스 : 현재 실행 중인 명령어가 CPU와 메모리 간에 데이터를 전송할 때에 명령어와 데이터의 주소를 가짐.</code></pre>
+> cf) 클럭(clock) : 디지털 회로의 전기적 진동(0과 1만을 나타내는 펄스)의 속도수를 뜻하며, 기계 사이클(클럭 사이클)은 하나의 완전한 클럭 펄스에 대해 걸리는 시간이다. 주기는 초당 진동수로 측정되는 클럭 속도의 역수로 계산, 기계어 명령어는 수행하는 데에 적어도 한 클럭 사이클이 필요
+> 기계어 명령어를 실행하려면 인출(Fecth), 해독(Decode), 실행(Execute) 3가지의 기본 단계가 필요
+
+## 캐시 메모리(=SRAM) 
+<pre><code>일반 메모리는 CPU보다 훨씬 느리므로 컴퓨터는 가장 최근에 사용된 명령어와 데이터를 저장하기 위해서
+고속 캐시 메모리를 사용, 프로그램이 블록 데이터를 처음 읽을 때 캐시에 복사본을 남기며, 같은 데이터를 읽는다면
+프로그램은 캐시에 있는 데이터를 찾음, 캐시 적중은 데이터가 캐시에 있다는 것을 나타내며, 캐시 미스는 데이터가
+캐시에 없어서 일반 메모리(=DRAM)에서 읽어야 한다는 것을 나타냄. 보통 Register와 RAM 사이에 존재하며, 캐시 1은 CPU
+안에 존재하며 캐시 2는 CPU 밖에 존재</code></pre>
+
+## 프로그램 실행 및 프로세스 적재
+<pre><code>실행파일은 보통 보조기억장치(HDD, SSD)에 있다가 실행되는 순간 RAM으로 옮겨지고 프로세스 형태로
+남는다. 이 과정을 적재라고 하며, 적재는 OS에 의해 이뤄진다.</code></pre>
+
+## 멀티태스킹
+<pre><code>태스크(task)는 프로그램(혹은 프로세스)이나 실행 쓰레드(thread)로서 정의된다. 프로세스는 자신의 메모리
+영역을 가지고 있으며 여러 개의 쓰레드를 포함할 수 있다. 쓰레드는 같은 프로세스에 속한 다른 쓰레드와 메모리를 공유
+한다. 여러 그래픽 객체를 동시에 제어하거나 웹의 사용자 응답 기능을 위해 개별 쓰레드를 사용.</code></pre>
+<pre><code>CPU는 한 번에 하나의 명령어만을 실행할 수 있으며, 스케줄러(Scheduler)라고 하는 운영체제의 구성요소는
+CPU 시간의 조각을 각 태스크(Task)에 할당한다.</code></pre>
+
+## 실행 레지스터 종류 & 단위
+> Resigter : EAX, EBX, ECX, EDX, EBP, ESP, EIP, ESI, EDI, CS, DS, ...
+<pre><code>EAX = 계산에 대한 값이 나오거나 주로 출력을 위해 종종 사용함(누산기 = Accumulator)
+EBX = 특정 주소 저장, Base Register, ECX = LOOP 명령어의 반복 횟수를 주로 저장, EDX = 일반 데이터 저장
+EBP = 스택의 시작 포인터, ESP = 스택의 가장 끝 주소(포인터), EIP = 다음 명령어의 주소를 저장
+EDI = 목적지 주소의 값 저장, ESI = 출발 주소의 값 저장 - OFFSET 사용</code></pre>
+<pre><code>단위는 EAX = 32bits(4bytes), AX = 16bits(2bytes), AH = AL = 8bits(1byte)에 따라
+BYTE = 1byte, WORD = 2bytes, DWORD = 4bytes 사용( = C Language int, char)</code></pre>
+
+## 페이징(Paging)
+<pre><code>컴퓨터가 메인 메모리에서 사용하기 위해 2차 기억 장치로부터 데이터를 저장하고 검색하는 메모리 관리 기법
+동시에 실행 중인 모든 프로그램이 사용하는 전체 메모리가 컴퓨터의 물리적 메모리보다 훨씬 더 커 보이게 만든다. 
+즉, 가상기억장치를 모두 같은 크기의 블록으로 편성하여 운용하는 기법이다.</code></pre>
+
+## 하이퍼 쓰레딩(SMT)
+<pre><code>두 작업을 전통적인 단일 프로세서에서 동시에 수행할 수 있게 하는 동시 멀티쓰레딩(= 컴퓨터 처리속도 감소)</code></pre>
+
+## 듀얼 코어(Dual Core)
+<pre><code>같은 집적회로(IC) 패키지에 두 개의 완전한 물리적 컴퓨터 프로세서 칩을 포함한 집적회로, 동일한 성능으로
+작동하는 CPU 여러 개를 1개의 칩에 넣은 것을 의미</code></pre>
