--- a/어셈블리어 개념.md
+++ b/어셈블리어 개념.md
@@ -68,3 +68,6 @@ BYTE = 1byte, WORD = 2bytes, DWORD = 4bytes 사용( = C Language int, char)</cod
 ## 듀얼 코어(Dual Core)
 <pre><code>같은 집적회로(IC) 패키지에 두 개의 완전한 물리적 컴퓨터 프로세서 칩을 포함한 집적회로, 동일한 성능으로
 작동하는 CPU 여러 개를 1개의 칩에 넣은 것을 의미</code></pre>
+
+## 리틀 엔디언(Little Endian)
+> x86 프로세서들은 하위부터 상위로 가는 순서를 사용하여 메모리에 데이터를 저장하고 꺼냄, 가령 12345678을 입력 후 저장하면 1바이트씩 78 56 34 12 이렇게 저장된다.
